@@ -1,5 +1,8 @@
 [b]Version 0.6.0rc3[/b] (not released yet):
 
+(2008-03-13)
+ * Added a new dialog to report the mplayer errors.
+
 (2008-03-11)
  * Displays a warning dialog if mplayer exits with an exit code 
    different to 0. 
